--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       </span>  
     <div class="about-me-text">
       <h3>About Me</h3>
-      <p>Hola mi nombre es Maku Esteban Serrano nací en Argentina y tengo 22 años. Soy desarrollador web Front End, me apasiona los diseños minimalistas y mordernos,
-        mis conocimientos los adquiri de manera autodidacta y en base a la Universidad Nacional de Tres de Febrero. No tengo experiencia en el ambito laboral.</p>
+      <p>Hola mi nombre es Maku Esteban Serrano nací en Argentina y tengo 22 años. Soy desarrollador web Front End,
+        tengo conocimientos en HTML5, CSS y JavaScript. Actualmente estudio en la Universidad Nacional de Tres de Febrero.</p>
         
       </div>
      
