--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,700&display=swap"
+  rel="stylesheet">
+  <script src="https://unpkg.com/scrollreveal"></script>
   <script defer src="app.js"></script>
 
   <title>Portafolio MS</title>
@@ -34,7 +34,7 @@
       <ion-icon name="menu-outline"></ion-icon>
     </div>
     <div class="nav-container">
-      <a class="responsive-icon">M<span class="color">AKU</span></a>
+      <a href="index.html" class="responsive-icon">M<span class="color">AKU</span></a>
       <ul class="menu">
         <buttom class="close-menu">
           <ion-icon name="close-outline"></ion-icon>
@@ -59,11 +59,20 @@
         <img src="img/yofachero1.jpeg" alt="Maku Serrano" class="img-front">
       </div>
     </div>
-    <div class="home-img-responsive">
-      <!--box-->
-      <img src="img/yofachero1.jpeg" alt="Maku Serrano" class="img-front">
-    </div>
+   
 
+
+    <div class="social-media-container">
+      <ul class="social-media">
+
+       <li><a href="https://github.com/makuserrano" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+       <li><a href="https://www.linkedin.com/in/maku-serrano/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+       <li><a href="https://instagram.com/makuserrano14" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+       
+
+
+      </ul>
+    </div>
   </section>
 
   </div>
@@ -71,13 +80,11 @@
 
 
   <section class="about-me" id="about-me">
-    <!---<span class="about-me-img">
-        <img src="img/maku-about-me-img.jpg" alt="Maku Serrano">
-      </span>  -->
+   
     <div class="about-me-text">
       <h3>About Me</h3>
       <p>Hola mi nombre es Maku Esteban Serrano nací en Argentina y tengo 22 años. Soy desarrollador web Front End,
-        tengo conocimientos en HTML5, CSS y JavaScript. Actualmente estudio en la Universidad Nacional de Tres de
+        tengo conocimientos en HTML5, CSS, JavaScript y bootstrap. Actualmente estudio en la Universidad Nacional de Tres de
         Febrero.</p>
     </div>
     <div class="about-me-icons">
