--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
   <section class="contact-container" id="contact-container">
     <h3>Contact</h3>
-    <form>
+    <form action="">
       <input type="text" placeholder="Nombre" class="name" required>
       <input type="email" name="" id="" placeholder="Email" class="email" required>
       <textarea name="" id="" cols="30" rows="10"   class="message" required></textarea>
@@ -186,6 +186,9 @@
     })();
   </script>
 
+  <!--- ALERTAS  -->
+
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
