--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
     <div class="home-img">
       <div class="aro">
-        <img src="img/yofachero1.jpeg" alt="Maku Serrano" class="img-front">
+        <img src="img/yo.png" alt="Maku Serrano" class="img-front">
       </div>
     </div>
    
