--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="social-media-container">
       <ul class="social-media">
 
-       <li><a href="https://github.com/makuserrano" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+       <li><a href="https://github.com/makuserrano" class="logo-github" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
        <li><a href="https://www.linkedin.com/in/maku-serrano/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
        <li><a href="https://instagram.com/makuserrano14" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
        
@@ -86,7 +86,9 @@
       <p>Hola mi nombre es Maku Esteban Serrano nací en Argentina y tengo 22 años. Soy desarrollador web Front End,
         tengo conocimientos en HTML5, CSS, JavaScript y bootstrap. Actualmente estudio en la Universidad Nacional de Tres de
         Febrero.</p>
+      <a href="./img/Maku Esteban Serrano CV.pdf" download="Maku Esteban Serrano - CV" class="download-cv">Descargar CV</a>
     </div>
+    
     <div class="about-me-icons">
 
 
